--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ color: var(--black-main);
                                 supported by Chrome, Edge, Opera and Firefox */
 }
 
+a {
+    text-decoration: none;
+    color: var(--black-main);
+}
+
 .app {
     position: relative;
     top: 0;
@@ -64,8 +69,24 @@ color: var(--black-main);
     height: 100%;
 }
 /* nav */
-.nav {
+.button-wrapper {
+    background-color: transparent;
     position: fixed;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 200px;
+    height: 100px;
+    z-index: 10;
+
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nav {
+    position: relative;
     display: block;
 
     font-size: 1rem;
@@ -73,25 +94,21 @@ color: var(--black-main);
     background-color: var(--bg-color);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
 
-    margin-top: 20px;
     padding: 10px 20px 10px 20px;
     border-radius: 25px;
 
-    left: 50%;
-    transform: translateX(-50%);
     opacity: 0;
 
     text-decoration: none;
     color: var(--black-main);
     cursor: pointer;
-    z-index: 10;
+    z-index: 11;
 
     transition: background-color 0.3s, color 0.3s;
 }
 
-.projects {
+.button-wrapper:has(.projects) {
     bottom: 0;
-    margin-bottom: 20px;
 }
 
 .nav:hover {
