--- a/style.css
+++ b/style.css
@@ -69,8 +69,19 @@ a {
     height: 100%;
 }
 /* nav */
+.debugger {
+    position: fixed;
+    display: none;
+    background: var(--gray-second-difference);
+    color: var(--bg-color);
+    width: 200px;
+    top: 0;
+    height: auto;
+    z-index: 99;
+}
+
 .button-wrapper {
-    background-color: transparent;
+    /* background-color: var(--blue-bg); */
     position: fixed;
 
     display: flex;
@@ -79,6 +90,7 @@ a {
 
     width: 200px;
     height: 100px;
+    border-radius: 25px;
     z-index: 10;
 
     left: 50%;
@@ -406,6 +418,9 @@ section.preload {
 
 
 @media screen and (max-width: 768px) {
+    .button-wrapper {
+    }
+
     .name h2, .name h3 {
         top: 49%;
     }
