--- a/style.css
+++ b/style.css
@@ -418,9 +418,6 @@ section.preload {
 
 
 @media screen and (max-width: 768px) {
-    .button-wrapper {
-    }
-
     .name h2, .name h3 {
         top: 49%;
     }
@@ -428,15 +425,18 @@ section.preload {
     .school {
         left: 50%;
         animation-duration: 13s, 3s;
+        bottom: -20%;
     }
 
     .emoji {
-        bottom: -20%
+        bottom: -20%;
     }
 
     .emoji:nth-of-type(1) {
         left: 5%;
     }
+
+
 }
 
 @media screen and (max-width: 480px) {
@@ -460,6 +460,10 @@ section.preload {
 
     .emoji:nth-of-type(1) {
         left: 5%;
+    }
+
+    .emoji:nth-of-type(2) {
+        display: none;
     }
 }
 
